--- a/src/features/username/username.css
+++ b/src/features/username/username.css
@@ -1,11 +1,7 @@
 .username {
     max-width: 90%;
     margin: 2rem;
-}
-
-/* figure out how to wrap words even if they shouldn't be able to wrap */
-.username h3 {
-    max-width: 200px;
+    word-break: break-all;
 }
 
 .test {
